# log-classifier

./: .gitignore  .weeder.yaml  3  CI-NIX.md  CI.md  ChangeLog.md  Classify.hs  Dockerfile  INSTALL.md  README.md  Regex.hs  Types.hs  USAGE.md  Util.hs  Zendesk.hs  bors.toml  buildkite.sh  cabal.project  cabal2nix.nix  concurrent-output.nix  default.nix  docker-compose.yml  fetch-nixpkgs.nix  fetch-zendesk-logs.hs  fetchNixpkgs.nix  gpg  knowledge.csv  lib.nix  log-classifier-cli.nix  log-classifier-web.nix  log-classifier.cabal  log-classifier.nix  logical.nix  nixpkgs-src.json  nixpkgs.json  package.yaml  physical.nix  release.nix  schema.sql  shell.nix  (+6 more)
.buildkite/: pipeline.yml
LogAnalysis/: Classifier.hs  KnowledgeCSVParser.hs  Types.hs
app/: CLI.hs  Main.hs
classifier/: README.md  log-classifier.cabal
classifier/src/: Configuration.hs  Lib.hs  Util.hs
classifier/src/DataSource/: DB.hs  Http.hs  Types.hs
classifier/src/LogAnalysis/: Classifier.hs  KnowledgeCSVParser.hs  KnowledgeJSONParser.hs  Types.hs
classifier/test/: Spec.hs
cli/: README.md  cli.cabal
cli/src/: CLI.hs  Main.hs
knowledgebase/: knowledge.csv  youtrack2csv.py
log-classifier/: log-classifier.cabal
log-classifier-web/: log-classifier-web.cabal
log-classifier-web/test/: Spec.hs
log-classifier/src/Http/: Exceptions.hs  Layer.hs  README.md
log-classifier/src/LogAnalysis/: KnowledgeCSVParser.hs  Types.hs
log-classifier/test/: HttpQueueSpec.hs  Spec.hs
nix/overlays/: required.nix
scripts/: HOWTO-update-knowledgebase.md  youtrack2csv.py
src/: CLI.hs  Classify.hs  Common.hs  Config.hs  Configuration.hs  DataSource.hs  Exceptions.hs  HttpLayer.hs  HttpQueue.hs  Lib.hs  Pure.hs  Regex.hs  Statistics.hs  Types.hs  Util.hs  Zendesk.hs
src/DataSource/: Cached.hs  DB.hs  Exceptions.hs  Http.hs  Types.hs
src/Http/: Exceptions.hs  Layer.hs  Queue.hs
src/LogAnalysis/: Classifier.hs  Exceptions.hs  KnowledgeCSVParser.hs  KnowledgeJSONParser.hs  Types.hs
src/Web/: Server.hs
src/Zendesk/: Functions.hs  Types.hs
test/: HttpQueueSpec.hs  LogAnalysisSpec.hs  Spec.hs
web/: LICENSE  README.md  web.cabal
web/src/: Main.hs  Server.hs
