name:                log-classifier
version:             1.4.6.0
synopsis:            Log classifier for a Cardano node
description:         Please see the README
homepage:            https://github.com/input-output-hk/log-classifier#readme
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018 IOHK
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Classify
                       CLI
                       Exceptions
                       Lib
                       LogAnalysis.Classifier
                       LogAnalysis.Exceptions
                       LogAnalysis.KnowledgeCSVParser
                       LogAnalysis.Types
                       Regex
                       Statistics
                       DataSource
                       Configuration
                       Util
                       HttpLayer
  other-modules:       Paths_log_classifier
                       DataSource.DB
                       DataSource.Types
                       DataSource.Http
  ghc-options:         -Wall
  build-depends:       aeson
                     , array
                     , attoparsec
                     , base >=4.7 && <5
                     , bytestring
                     , containers
                     , directory
                     , http-conduit
                     -- Effects & company
                     , mtl
                     , monad-control
                     , transformers-base
                     , unliftio
                     -- 
                     , optparse-applicative
                     , regex-tdfa
                     , safe-exceptions
                     , text
                     , time
                     , universum
                     , zip-archive
                     , QuickCheck
                     -- Database backend
                     , sqlite-simple 
                     , resource-pool

  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      LambdaCase
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances
                      MonadFailDesugaring
                      TupleSections
                      StrictData
                      ExplicitForAll

executable log-classifier-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded 
                       -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base >=4.7 && <5
                     , log-classifier
                     , universum
  other-modules:       Paths_log_classifier

  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances
                      MonadFailDesugaring
                      TupleSections

test-suite log-classifier-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , log-classifier
                     , sqlite-simple
                     , text
                     , universum
                     , QuickCheck
                     , hspec

  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      MonadFailDesugaring
                      TupleSections

