name:                web
version:             1.6.0.0
synopsis:            Log classifier web executable
description:         Please see the README
homepage:            https://github.com/input-output-hk/log-classifier#readme
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018 IOHK
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable log-classifier-web
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded 
                       -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base >=4.7 && <5
                     , log-classifier
                     , universum
                     , bytestring
                     , aeson
                     -- servant
                     , servant
                     , servant-server
                     -- http infrastructure
                     , warp
                     , wai-extra
  other-modules:       Server
  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances
                      MonadFailDesugaring
                      TupleSections
